fix footer on IE

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,11 +11,11 @@
 @import "buttons";
 @import "facts";
 
-#app{
+/*#app{
 	display:flex;
 	flex-direction: column;
 	height:100%;
-}
+}*/
 
 .site-content{
 	flex:1;
